--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "async": "^0.7.0",
     "chalk": "^0.4.0",
     "commander": "^2.2.0",
-    "escape-regexp": "0.0.1"
+    "component-type": "^1.0.0",
+    "escape-regexp": "0.0.1",
+    "node-hipchat": "^0.4.5",
+    "simple-xmpp": "^0.1.19",
+    "node-xmpp": "^1.0.0-alpha1",
+    "bind-all": "0.0.2",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "mocha": "1.x"
