--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mathstring": "~0.1.5",
     "google-url": "0.0.4",
     "indent": "0.0.1",
-    "gi": "0.0.2"
+    "gi": "0.0.2",
+    "gitio2": "~2.0.0"
   },
   "devDependencies": {
     "mocha": "1.x"
