--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "s-hermes",
+  "publishConfig": {
+    "registry": "https://segmentio.registry.nodejitsu.com"
+  },
   "version": "0.0.0",
   "repository": "git://github.com/segmentio/hermes.git",
   "license": "MIT",
