--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "devDependencies": {
     "mocha": "1.x",
     "browserify": "~3.46.0",
-    "serve": "^1.4.0"
+    "serve": "^1.4.0",
+    "component": "^0.19.9"
   },
   "keywords": [
     "chat",
